--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <nav class="navbar">
             <a href="#">Destinos</a>
             <a href="#">Booking</a>
-            <a href="#">Service</a>
-            <a href="#">Contact</a>
+            <a href="#">Serviços</a>
+            <a href="#">Contato</a>
         </nav>
 
    
@@ -43,14 +43,14 @@
                         <h1>Chi</h1>
                   </div>
                   <div class="content">
-                    <h3>01. china Forest Tour</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur
-                    adipisicing elit. Nihil minus in ex iure molestias,
-                    cupiditate consequatur consectetur nemo nulla eos quis
-                    exercitationem obcaecati dignissimos illo eligendi, delectus
-                    ad corrupti aperiam.
+                    <h3>01. china Forest Tour </h3>
+                    <p>A China é um país vasto e diversificado, 
+                  abrigando uma variedade impressionante de paisagens naturais, 
+                  incluindo suas exuberantes florestas. As florestas da China desempenham
+                 um papel vital na biodiversidade global, abrigando inúmeras espécies de plantas
+                 e animais, algumas das quais são exclusivas dessa região.
                     </p>
-                    <a href="#" class="btn">more datails</a>
+                    <a href="#" class="btn">Mais detalhes</a>
                   </div>
                </div>
                <div class="right-info">
@@ -67,13 +67,12 @@
                    </div>
                    <div class="content">
                      <h3>02. Japão Forest Tour</h3>
-                     <p>Lorem ipsum dolor, sit amet consectetur
-                     adipisicing elit. Nihil minus in ex iure molestias,
-                     cupiditate consequatur consectetur nemo nulla eos quis
-                     exercitationem obcaecati dignissimos illo eligendi, delectus
-                     ad corrupti aperiam.
+                     <p>Suas exuberantes paisagens naturais 
+                    oferecem uma rica diversidade de flora e fauna, 
+                    com árvores majestosas como cedros e pinheiros,
+                     criando um cenário pitoresco que é reverenciado na cultura japonesa.
                      </p>
-                     <a href="#" class="btn">more datails</a>
+                     <a href="#" class="btn">Mais detalhes</a>
                    </div>
                 </div>
                 <div class="right-info">
@@ -91,13 +90,13 @@
                    </div>
                    <div class="content">
                      <h3>03. Africa Forest Tour</h3>
-                     <p>Lorem ipsum dolor, sit amet consectetur
-                     adipisicing elit. Nihil minus in ex iure molestias,
-                     cupiditate consequatur consectetur nemo nulla eos quis
-                     exercitationem obcaecati dignissimos illo eligendi, delectus
-                     ad corrupti aperiam.
+                     <p>As florestas da África são tesouros 
+                    incomparáveis de biodiversidade e riqueza natural,
+                     abrangendo uma vasta diversidade de ecossistemas, 
+                    desde as densas florestas tropicais até as savanas 
+                    arborizadas e as florestas de miombo.
                      </p>
-                     <a href="#" class="btn">more datails</a>
+                     <a href="#" class="btn">Mais detalhes</a>
                    </div>
                 </div>
                 <div class="right-info">
@@ -115,13 +114,13 @@
                    </div>
                    <div class="content">
                      <h3>04. Brasil Forest Tour</h3>
-                     <p>Lorem ipsum dolor, sit amet consectetur
-                     adipisicing elit. Nihil minus in ex iure molestias,
-                     cupiditate consequatur consectetur nemo nulla eos quis
-                     exercitationem obcaecati dignissimos illo eligendi, delectus
-                     ad corrupti aperiam.
+                     <p>As florestas do Brasil são uma joia da biodiversidade mundial, 
+                    compreendendo uma das maiores e mais diversas extensões de floresta 
+                    tropical do planeta. A Floresta Amazônica, um dos principais ícones brasileiros,
+                     abriga uma miríade de espécies de plantas, animais e insetos,
+                     muitos dos quais ainda desconhecidos pela ciência.
                      </p>
-                     <a href="#" class="btn">more datails</a>
+                     <a href="#" class="btn">Mais detalhes</a>
                    </div>
                 </div>
                 <div class="right-info">
@@ -139,13 +138,14 @@
                    </div>
                    <div class="content">
                      <h3>05. Servia Forest Tour</h3>
-                     <p>Lorem ipsum dolor, sit amet consectetur
-                     adipisicing elit. Nihil minus in ex iure molestias,
-                     cupiditate consequatur consectetur nemo nulla eos quis
-                     exercitationem obcaecati dignissimos illo eligendi, delectus
-                     ad corrupti aperiam.
+                     <p>A Sérvia é uma nação de paisagens deslumbrantes, 
+                        com suas majestosas montanhas desempenhando um papel 
+                        proeminente nessa beleza natural. As montanhas da Sérvia 
+                        oferecem vistas panorâmicas, desfiladeiros espetaculares,
+                     lagos cristalinos e densas florestas, atraindo amantes da natureza
+                         e aventureiros de todo o mundo.
                      </p>
-                     <a href="#" class="btn">more datails</a>
+                     <a href="#" class="btn">Mais detalhes</a>
                    </div>
                 </div>
                 <div class="right-info">
